Remove Optional usage