@@ -13,16 +13,14 @@
  */
 package org.snakeyaml.engine.v2.api;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
-import com.google.common.collect.Lists;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.snakeyaml.engine.v2.util.TestUtils;
+
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @Tag("fast")
 class LoadSequenceTest {
@@ -30,46 +28,45 @@ class LoadSequenceTest {
   @Test
   @DisplayName("Empty list [] is parsed")
   void parseEmptyList() {
-    LoadSettings settings = LoadSettings.builder().build();
-    Load load = new Load(settings);
-    List<Integer> list = (List<Integer>) load.loadFromString("[]");
-    assertEquals(new ArrayList<>(), list);
+    var settings = LoadSettings.builder().build();
+    var load = new Load(settings);
+    var list = (List<Integer>) load.loadFromString("[]");
+    assertEquals(List.of(), list);
   }
 
   @Test
   @DisplayName("list [2] is parsed")
   void parseList1() {
-    LoadSettings settings = LoadSettings.builder().build();
-    Load load = new Load(settings);
-    List<Integer> list = (List<Integer>) load.loadFromString("[2]");
-    assertEquals(Collections.singletonList(Integer.valueOf(2)), list);
+    var settings = LoadSettings.builder().build();
+    var load = new Load(settings);
+    var list = (List<Integer>) load.loadFromString("[2]");
+    assertEquals(List.of(2), list);
   }
 
   @Test
   @DisplayName("list [2,3] is parsed")
   void parseList2() {
-    LoadSettings settings = LoadSettings.builder().build();
-    Load load = new Load(settings);
-    List<Integer> list = (List<Integer>) load.loadFromString("[2,3]");
-    assertEquals(Lists.newArrayList(2, 3), list);
+    var settings = LoadSettings.builder().build();
+    var load = new Load(settings);
+    var list = (List<Integer>) load.loadFromString("[2,3]");
+    assertEquals(List.of(2, 3), list);
   }
 
   @Test
   @DisplayName("list [2,a,true] is parsed")
   void parseList3() {
-    LoadSettings settings = LoadSettings.builder().build();
-    Load load = new Load(settings);
-    List<Object> list = (List<Object>) load.loadFromString("[2,a,true]");
-    assertEquals(Lists.newArrayList(2, "a", Boolean.TRUE), list);
+    var settings = LoadSettings.builder().build();
+    var load = new Load(settings);
+    var list = (List<Object>) load.loadFromString("[2,a,true]");
+    assertEquals(List.of(2, "a", Boolean.TRUE), list);
   }
 
   @Test
   @DisplayName("list is parsed")
   void parseList4() {
-    LoadSettings settings = LoadSettings.builder().build();
-    Load load = new Load(settings);
-    List<Object> list =
-        (List<Object>) load.loadFromString(TestUtils.getResource("load/list1.yaml"));
-    assertEquals(Lists.newArrayList("a", "bb", "ccc", "dddd"), list);
+    var settings = LoadSettings.builder().build();
+    var load = new Load(settings);
+    var list = (List<Object>) load.loadFromString(TestUtils.getResource("load/list1.yaml"));
+    assertEquals(List.of("a", "bb", "ccc", "dddd"), list);
   }
 }
