@@ -15,17 +15,17 @@ package org.snakeyaml.engine.v2.parser;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import com.google.common.collect.ImmutableMap;
-import java.util.Optional;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+
+import java.util.Map;
 
 @Tag("fast")
 class VersionTagsTupleTest {
 
   @Test
   void testToString() {
-    VersionTagsTuple tuple = new VersionTagsTuple(Optional.empty(), ImmutableMap.of());
+    var tuple = new VersionTagsTuple(null, Map.of());
     assertEquals("VersionTagsTuple<Optional.empty, {}>", tuple.toString());
   }
 }
